--- a/css/css/index.css
+++ b/css/css/index.css
@@ -247,9 +247,18 @@ nav .box2 ul li a:hover{
 	position: absolute;
 	width: 64px;
 	height: 64px;
-	background-color: red;
+	
 	z-index: 50;
 
+}
+.section3 .box5 .box51 a i{
+	display: block;
+	width: 100%;
+	height: 100%;
+	font-size: 40px;
+	color: #fff;
+	text-align: center;
+	line-height: 64px;
 }
 .section4{
 	width: 100%;
@@ -292,7 +301,9 @@ nav .box2 ul li a:hover{
 	display: block;
 	width: 12px;
 	height: 12px;
-	background-color: red;
+	
+	font-size: 12px;
+	color: #989898;
 }
 .section5{
 	width: 100%;
@@ -379,13 +390,18 @@ nav .box2 ul li a:hover{
 	display: block;
 	width: 13px;
 	height: 17px;
-	background-color: red;
+	
+	font-size: 13px;
+	color: #bababa;
 }
 .section5 .bigbox .box7:hover .bigbox2 .box71 .box711 .a3{
 	color: #258de8;
 }
 .section5 .bigbox .box7:hover .bigbox2 .box71 .a4{
 	border-color: #999;
+}
+.section5 .bigbox .box7:hover .bigbox2 .box71 .a4 i{
+	color: #989898;
 }
 .section5 .bigbox .box7 .bigbox2 .box71 .box711 .box7111{
 	width: 296px;
@@ -438,6 +454,20 @@ nav .box2 ul li a:hover{
 	
 	position: relative;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .section7 .box8 .box81 .box811{
 	position: absolute;
 	top: 70px;
@@ -483,20 +513,30 @@ nav .box2 ul li a:hover{
 .section7 .box8 .box81 .box813{
 	width: 1110px;
 	height: 100%;
-	
+	position: relative;
 	margin: 0 auto;
+	overflow: hidden;
 }
 .section7 .box8 .box81 .box813 .box8131{
+	position: absolute;
 	width: 100%;
 	height: 160px;
-	
+	top: 0;
+	left: 0;
 	display: flex;
 	justify-content: space-between;
+}
+.section7 .box8 .box81 .box813 .box8131:nth-child(1){
+	left: 1200px;
 }
 .section7 .box8 .box81 .box813 .box8132{
 	width: 100%;
 	height: 23px;
-	
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: 0 auto;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -571,6 +611,9 @@ nav .box2 ul li a:hover{
 .section7 .box8 .box81 .box813 .box8132 .lunbo{
 	width: 6px;
 	height: 6px;
+	background-color: #000;
+}
+.section7 .box8 .box81 .box813 .box8132 .lunbo.xy{
 	background-color: #ff6700;
 }
 .section7 .box8 .box81 .box813 .box8132 .lunbo:nth-child(2){
@@ -665,6 +708,9 @@ nav .box2 ul li a:hover{
 	border-radius: 50%;
 	margin-right: 7px;
 	float: left;
+	font-size: 24px;
+	color: #000;
+	
 }
 .section9 .box10 .box102 .box1021{
 	width: 100%;
