--- a/css/css/index5.css
+++ b/css/css/index5.css
@@ -140,6 +140,8 @@ nav .box2 ul li a:hover{
 	border-radius: 50%;
 	margin-right: 7px;
 	float: left;
+	font-size: 24px;
+	color: #000;
 }
 .section1 .box1 .box10 .box102 .box1021{
 	width: 100%;
